# sanogueralorenzo.github.io

./: .gitignore  AGENTS.md  AGENTS_REFERENCE.md  AGENTS_REFERENCE_V2  AGENTS_REFERENCE_V2.md  AGENTS_REFERENCE_V3.md  AGENTS_REFERENCE_V4.md  AGENTS_V2  AGENTS_V2.md  AGENTS_V3.md  AGENTS_V4.md  LICENSE  README.md  install.sh
agents/gateway/: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
agents/gateway/scripts/: compare-reply-latency.sh  gateway  record-reply-latency.sh  transcribe-whispercpp.sh
agents/gateway/src/: binding_store.rs  codex_sessions.rs  index.ts  main.rs
agents/gateway/src/adapters/: app-server-client.ts  binding-store.ts  codex-sessions.ts
agents/gateway/src/bot/: approvals.ts  commands.ts  context.ts  index.ts  keyboards.ts  messages-handler.ts  middleware.ts  router.ts
agents/gateway/src/services/: prompt-runner.ts  telegram-draft-streamer.ts  thread-actions.ts  voice.ts
codex/codex-core/: Cargo.toml  README.md
codex/codex-core/scripts/: install.sh
codex/codex-core/src/: main.rs
codex/codex-core/src/agents/: config.rs  mod.rs  review.rs  spike.rs  task.rs  worker.rs
codex/codex-core/src/auth/: auth_file.rs  cli.rs  manager.rs  mod.rs  models.rs  output.rs  process.rs  profile_store.rs  util.rs  watcher.rs  watcher_process.rs
codex/codex-core/src/core/: events.rs  process.rs  temp.rs
codex/codex-core/src/noninteractive/: cli.rs  command.rs  mod.rs  output.rs  prompt.rs  (+1 more)
harness/: Cargo.toml  README.md
harness/src/: main.rs
harness/src/agent/: mod.rs  model.rs  runtime.rs  session.rs  tools.rs
(+1428 files in other folders)
