[package]
name = "gateway"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros", "rustls"] }
tempfile = "3.14"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
